--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello World!</title>
-
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
     <script type="module" src="/src/renderer.ts"></script>
+  </head>
+  <h1>Lobisomem Wiki</h1>
+  <body>
+    <a class="btn" href="/src/pages/dons.html">
+      Dons
+    </a>
+    <a class="btn" href="/src/pages/fetiches.html">
+      Fetiches
+    </a>
+    <a class="btn" href="/src/pages/qualidades-e-defeitos.html">
+      Qualidades e Defeitos
+    </a>
   </body>
 </html>
