--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Lobisomem Wiki</title>
     <script type="module" src="/src/renderer.ts"></script>
   </head>
   <h1>Lobisomem Wiki</h1>
