--- a/src/pages/dons.html
+++ b/src/pages/dons.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="/src/scripts/teste.ts"></script>
     </head>
     <body>
         <a class="btn" href="./index.html">
             Voltar
         </a>
         <h1>Dons</h1>
+
+        <div id="myText"></div>
+
+        <div id="obj"></div>
     </body>
 </html>
