--- a/src/pages/dons.html
+++ b/src/pages/dons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="/src/scripts/teste.ts"></script>
+        <script type="module" src="/src/scripts/teste.ts"></script>
     </head>
     <body>
         <a class="btn" href="./index.html">
